[ cheap flights ] adding to document

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -39,13 +39,14 @@
 
 \tableofcontents \clearpage
 
-%\clearpage
-%\songsection{A Capella}
-%    \begin{songs}{}
-%        %\input{../src/hasso/LaTeX/hasso}                                                                                    \sclearpage
-%        %\input{../src/mad_world/LaTeX/mad_world}                                                                            \sclearpage
-%        %\input{../src/walk_down_that_lonesome_road/LaTeX/walk_down_that_lonesome_road}
-%    \end{songs}
+\clearpage
+\songsection{A Capella}
+    \begin{songs}{}
+        \input{../src/cheap_flights/LaTeX/cheap_flights}                                                                    \sclearpage
+        %\input{../src/hasso/LaTeX/hasso}                                                                                    \sclearpage
+        %\input{../src/mad_world/LaTeX/mad_world}                                                                            \sclearpage
+        %\input{../src/walk_down_that_lonesome_road/LaTeX/walk_down_that_lonesome_road}
+    \end{songs}
 
 %\clearpage
 %\songsection{Classic}
