--- a/TeX/Chordbook_Extended/Chordbook_Extended.tex
+++ b/TeX/Chordbook_Extended/Chordbook_Extended.tex
@@ -43,6 +43,7 @@
 %\clearpage
 %\songsection{A Capella}
     %\begin{songs}{}
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/cheap_flights/lilypond/PDF/cheap_flights.pdf}                                                             \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hasso/lilypond/PDF/hasso.pdf}                                                                             \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mad_world/lilypond/PDF/mad_world.pdf}                                                                     \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/walk_down_that_lonesome_road/lilypond/PDF/walk_down_that_lonesome_road.pdf}
