[ green fields of france ] typos and chord position correction

--- a/src/the_green_fields_of_france/LaTeX/the_green_fields_of_france.tex
+++ b/src/the_green_fields_of_france/LaTeX/the_green_fields_of_france.tex
@@ -15,7 +15,7 @@
         \gtab{G}{320033:210034}
         \gtab{Em}{022000:023000}
         \gtab{Am}{X02210:002310}
-        \gtab{Am/C}{X32210:042310:}
+        \gtab{Am/C}{X32210:042310}
         \gtab{D7}{XX0212:000213}
         \gtab{C}{332010:342010}
     \end{center}
@@ -40,7 +40,7 @@
     \endchorus
 
     \beginverse\replay[verse]
-        Did you l^eave a wife ^ or a s^weetheart beh^ind?
+        Did you l^eave a wife ^ or a sw^eetheart beh^ind?
         In s^ome faithful heart is your m^emory ^enshr^ined,
         Alth^ough you died b^ack in n^ineteen-sixt^een,
         In th^at faithful heart you are for^ever n^inet^een.
@@ -64,7 +64,7 @@
         And l^ook how the s^un shines from ^under the tr^ee,
         There's no g^as, no barbed wire, no g^uns fir^ing n^ow.
         \brk
-        But h^ere in this gr^aveyard it's st^ill "No man's L^and",
+        But h^ere in this gr^aveyard it's st^ill ``No man's L^and'',
         The c^ountless white crosses lay m^ute und the ^ sand. ^
         To m^an's blind ind^ifference to h^is fellow m^an,
         To a wh^ole generation that were b^utchered ^and d^amned.
