[ section rename ] Folk / Medieval
... will be renamed to *Folk / Medieval / Traditional*

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -55,7 +55,7 @@
 %    \end{songs}
 
 \clearpage
-\songsection{Folk and Medieval}
+\songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
         %\input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
         \input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
