--- a/TeX/Chordbook_Extended/Chordbook_Extended.tex
+++ b/TeX/Chordbook_Extended/Chordbook_Extended.tex
@@ -56,7 +56,7 @@
     %\end{songs}
 
 \clearpage
-\songsection{Folk and Medieval}
+\songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/das_bier_ich_in_der_rechten_trug/lilypond/PDF/das_bier_ich_in_der_rechten_trug.pdf}                       \sclearpage
         \includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/der_wandersmann/lilypond/PDF/der_wandersmann.pdf}                                                         \sclearpage
