renaming songs with - in their path instead of _

--- a/src/auld_lang_syne/LaTeX/auld_lang_syne.tex
+++ b/src/auld_lang_syne/LaTeX/auld_lang_syne.tex
@@ -2,16 +2,16 @@
 
 \stepcounter{subsection}
 
-\beginsong{Davy Jones Theme}[%
-    by={Eddie van der Meer},
-    cr={Eddie van der Meer},
-    li={Epic Elite},
-    index={davy-jones-theme}]
+\beginsong{Auld Lang Syne}[%
+    by={Unknown},
+    cr={},
+    li={},
+    index={auld_lang_syne}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Davy Jones Theme} --- Eddie van der Meer}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Auld Lang Syne} --- Unknown}
 
-    \label{davy-jones-theme}
+    \label{auld_lang_syne}
 
     \begin{center}
         \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
