--- a/src/davy_jones_theme/LaTeX/davy_jones_theme.tex
+++ b/src/davy_jones_theme/LaTeX/davy_jones_theme.tex
@@ -2,16 +2,16 @@
 
 \stepcounter{subsection}
 
-\beginsong{Silent Night}[%
-    by={Darrell Braun},
-    cr={Darrell Braun},
-    li={},
-    index={silent-night}]
+\beginsong{Davy Jones Theme}[%
+    by={Eddie van der Meer},
+    cr={Eddie van der Meer},
+    li={Epic Elite},
+    index={davy_jones_theme}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Silent Night} --- Darrell Braun}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Davy Jones Theme} --- Eddie van der Meer}
 
-    \label{silent-night}
+    \label{davy_jones_theme}
 
     \begin{center}
         \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
