--- a/src/silent_night/LaTeX/silent_night.tex
+++ b/src/silent_night/LaTeX/silent_night.tex
@@ -2,16 +2,16 @@
 
 \stepcounter{subsection}
 
-\beginsong{Auld Lang Syne}[%
-    by={Unknown},
-    cr={},
+\beginsong{Silent Night}[%
+    by={Darrell Braun},
+    cr={Darrell Braun},
     li={},
-    index={auld-lang-syne}]
+    index={silent_night}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Auld Lang Syne} --- Unknown}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Silent Night} --- Darrell Braun}
 
-    \label{auld-lang-syne}
+    \label{silent_night}
 
     \begin{center}
         \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
