[ adding new songs to files ] but commented out
- auld lang syne
- davy jones theme
- silent night

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -57,7 +57,9 @@
 \clearpage
 \songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
+        %\input{../src/auld_lang_syne/LaTeX/auld_lang_syne}                                                                  \sclearpage
         %\input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
+        %\input{../src/davy_jones_theme/LaTeX/davy_jones_theme}                                                              \sclearpage
         \input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
         %\input{../src/dunkle_stunde/LaTeX/dunkle_stunde}                                                                    \sclearpage
         %\input{../src/far_over_the_misty_mountains_cold/LaTeX/far_over_the_misty_mountains_cold}                            \sclearpage
@@ -76,6 +78,7 @@
         %\input{../src/prinzessin/LaTeX/prinzessin}                                                                          \sclearpage
         %\input{../src/scotland_the_brave/LaTeX/scotland_the_brave}                                                          \sclearpage
         %\input{../src/senzenina/LaTeX/senzenina}                                                                            \sclearpage
+        %\input{../src/silent_night/LaTeX/silent_night}                                                                      \sclearpage
         %\input{../src/step_it_out_mary/LaTeX/step_it_out_mary}                                                              \sclearpage
         %\input{../src/tanz_mit_mir/LaTeX/tanz_mit_mir}                                                                      \sclearpage
         %\input{../src/the_bards_song/LaTeX/the_bards_song}                                                                  \sclearpage
