--- a/TeX/Chordbook_Extended/Chordbook_Extended.tex
+++ b/TeX/Chordbook_Extended/Chordbook_Extended.tex
@@ -58,8 +58,10 @@
 \clearpage
 \songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/auld_lang_syne/lilypond/PDF/auld_lang_syne.pdf}                                                           \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/das_bier_ich_in_der_rechten_trug/lilypond/PDF/das_bier_ich_in_der_rechten_trug.pdf}                       \sclearpage
-        \includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/der_wandersmann/lilypond/PDF/der_wandersmann.pdf}                                                         \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/davy_jones_theme/lilypond/PDF/davy_jones_theme.pdf}                                                       \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/der_wandersmann/lilypond/PDF/der_wandersmann.pdf}                                                         \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dunkle_stunde/lilypond/PDF/dunkle_stunde.pdf}                                                             \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/far_over_the_misty_mountains_cold/lilypond/PDF/far_over_the_misty_mountains_cold.pdf}                     \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/geisterschiff/lilypond/PDF/geisterschiff.pdf}                                                             \sclearpage
@@ -72,10 +74,11 @@
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/lord_of_the_rings/lilypond/PDF/lord_of_the_rings.pdf}                                                     \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/making_up_the_miles/lilypond/PDF/making_up_the_miles.pdf}                                                 \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mord_auf_dem_abort/lilypond/PDF/mord_auf_dem_abort.pdf}                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}},pagecommand={\pagestyle{fancy}}]{../src/nebel_ueber_den_auen/lilypond/PDF/nebel_ueber_den_auen.pdf}               \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/nebel_ueber_den_auen/lilypond/PDF/nebel_ueber_den_auen.pdf}                                               \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/oh_adelsmann/lilypond/PDF/oh_adelsmann.pdf}                                                               \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/prinzessin/lilypond/PDF/prinzessin.pdf}                                                                   \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/senzenina/lilypond/PDF/senzenina.pdf}                                                                     \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/silent_night/lilypond/PDF/silent_night.pdf}                                                               \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/step_it_out_mary/lilypond/PDF/step_it_out_mary.pdf}                                                       \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/tanz_mit_mir/lilypond/PDF/tanz_mit_mir.pdf}                                                               \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_bards_song/lilypond/PDF/the_bards_song.pdf}                                                           \sclearpage
@@ -121,13 +124,13 @@
 %\clearpage
 %\songsection{Modern / Rock / Blues}{}
     %\begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/everything_burns/lilypond/PDF/everything_burns.pdf}                                                        \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/little_talks/lilypond/PDF/little_talks.pdf}                                                                \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/mountain_climbing/lilypond/PDF/mountain_climbing.pdf}                                                      \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/rolling_in_the_deep/lilypond/PDF/rolling_in_the_deep.pdf}                                                  \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/seven_nation_army/lilypond/PDF/seven_nation_army.pdf}                                                      \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/sound_of_silence/lilypond/PDF/sound_of_silence.pdf}                                                        \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}{../src/summer_wine/lilypond/PDF/summer_wine.pdf}                                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/everything_burns/lilypond/PDF/everything_burns.pdf}                                                       \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/little_talks/lilypond/PDF/little_talks.pdf}                                                               \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mountain_climbing/lilypond/PDF/mountain_climbing.pdf}                                                     \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/rolling_in_the_deep/lilypond/PDF/rolling_in_the_deep.pdf}                                                 \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/seven_nation_army/lilypond/PDF/seven_nation_army.pdf}                                                     \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sound_of_silence/lilypond/PDF/sound_of_silence.pdf}                                                       \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/summer_wine/lilypond/PDF/summer_wine.pdf}                                                                 \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/timshel/lilypond/PDF/timshel.pdf}
     %\end{songs}
 
