[ songs package workaround ] problem with hyperref
According to the maintainer of the songs package (Kevin Hamlen), the
hyperref package a) needs to be loaded and b) before loading the songs
package.

This is even weird, because the error message / the part of the songs
package mentioned in the error message, has nothing to do with hyperref.

This commit is a dirty hack, though, because it will put all the
songs-specific parts into the main document and off the class file.

The good news is, the songs.sty in the `Unix` folder will be gone.

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -2,8 +2,6 @@
 
 \documentclass[landscape]{../TeX/Chordbook/chordbook}
 
-% custom commands
-\input{../TeX/commands.tex}
 
 % having links in the document
 \usepackage[%
@@ -15,6 +13,16 @@
     %debug=true,
     hyperfigures=true%
     ]{hyperref}
+
+\usepackage[chorded]{songs}
+
+\setlength{\songnumwidth}{15mm}
+\setlength{\versenumwidth}{10mm}
+
+\renewcommand\printchord[1]{\sffamily\slshape\small#1}
+
+% custom commands
+\input{../TeX/commands.tex}
 
 \begin{document}
 
