[ silent night ] adding first verse to LaTeX

--- a/src/silent_night/LaTeX/silent_night.tex
+++ b/src/silent_night/LaTeX/silent_night.tex
@@ -20,7 +20,12 @@
     \end{center}
 
     \beginverse\memorize[verse]
-        Example verse ...
+        Silent night, holy night
+        All is calm, all is bright
+        Round yon Virgin, Mother, Mother and Child
+        Holy infant so tender and mild
+        Sleep in heavenly peace
+        Sleep in heavenly
     \endverse
 
     \beginverse\replay[verse]
