--- a/TeX/Chordbook_Extended/Chordbook_Extended.tex
+++ b/TeX/Chordbook_Extended/Chordbook_Extended.tex
@@ -49,9 +49,9 @@
 %\clearpage
 %\songsection{A Capella}
     %\begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/cheap_flights/lilypond/PDF/cheap_flights.ly.pdf}                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hasso/lilypond/PDF/hasso.ly.pdf}                                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mad_world/lilypond/PDF/mad_world.ly.pdf}                                                                     \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/cheap_flights/lilypond/PDF/cheap_flights.ly.pdf}                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hasso/lilypond/PDF/hasso.ly.pdf}                                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mad_world/lilypond/PDF/mad_world.ly.pdf}                                                                      \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/walk_down_that_lonesome_road/lilypond/PDF/walk_down_that_lonesome_road.ly.pdf}
     %\end{songs}
 
@@ -64,105 +64,106 @@
 \clearpage
 \songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/auld_lang_syne/lilypond/PDF/auld_lang_syne.ly.pdf}                                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/das_bier_ich_in_der_rechten_trug/lilypond/PDF/das_bier_ich_in_der_rechten_trug.ly.pdf}                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/davy_jones_theme/lilypond/PDF/davy_jones_theme.ly.pdf}                                                       \sclearpage
-        \includepdf[pages=-,landscape,turn=true,fitpaper=true,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/der_wandersmann/lilypond/PDF/der_wandersmann.pdf}                                                          \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dunkle_stunde/lilypond/PDF/dunkle_stunde.ly.pdf}                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/far_over_the_misty_mountains_cold/lilypond/PDF/far_over_the_misty_mountains_cold.ly.pdf}                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/geisterschiff/lilypond/PDF/geisterschiff.ly.pdf}                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/grau_sind_die_schwingen/lilypond/PDF/grau_sind_die_schwingen.ly.pdf}                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/i_see_fire/lilypond/PDF/i_see_fire.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ich_und_ein_fass_voller_wein/lilypond/PDF/ich_und_ein_fass_voller_wein.ly.pdf}                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/i_courted_a_wee_girl/lilypond/PDF/i_courted_a_wee_girl.ly.pdf}                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ihr_so_nah/lilypond/PDF/ihr_so_nah.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kleid_aus_rosen/lilypond/PDF/kleid_aus_rosen.ly.pdf}                                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/lord_of_the_rings/lilypond/PDF/lord_of_the_rings.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/making_up_the_miles/lilypond/PDF/making_up_the_miles.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mord_auf_dem_abort/lilypond/PDF/mord_auf_dem_abort.ly.pdf}                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/nebel_ueber_den_auen/lilypond/PDF/nebel_ueber_den_auen.ly.pdf}                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/oh_adelsmann/lilypond/PDF/oh_adelsmann.ly.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/prinzessin/lilypond/PDF/prinzessin.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/senzenina/lilypond/PDF/senzenina.ly.pdf}                                                                     \sclearpage
-        \includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/silent_night/lilypond/PDF/silent_night.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/step_it_out_mary/lilypond/PDF/step_it_out_mary.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/tanz_mit_mir/lilypond/PDF/tanz_mit_mir.ly.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_bards_song/lilypond/PDF/the_bards_song.ly.pdf}                                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_bonny_ship_the_diamond/lilypond/PDF/the_bonny_ship_the_diamond.ly.pdf}                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_dragonborn_comes/lilypond/PDF/the_dragonborn_comes.ly.pdf}                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_rattlin_bog/lilypond/PDF/the_rattlin_bog.ly.pdf}                                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_wild_rover/lilypond/PDF/the_wild_rover.ly.pdf}                                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/trunckenbolde/lilypond/PDF/trunckenbolde.ly.pdf}                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/willst_du/lilypond/PDF/willst_du.ly.pdf}                                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/wout_mit_den_woelfen/lilypond/PDF/wout_mit_den_woelfen.ly.pdf}                                               \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/auld_lang_syne/lilypond/PDF/auld_lang_syne.ly.pdf}                                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/das_bier_ich_in_der_rechten_trug/lilypond/PDF/das_bier_ich_in_der_rechten_trug.ly.pdf}                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/davy_jones_theme/lilypond/PDF/davy_jones_theme.ly.pdf}                                                        \sclearpage
+        \includepdf[pages=1,offset=50 -80,width=0.9\textwidth,pagecommand={\subsection{Der Wandersmann} \pagestyle{fancy}}]{../PUBLISH/REHEARSAL/der_wandersmann/der_wandersmann_ly.pdf}                            \sclearpage
+        \includepdf[pages=2-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../PUBLISH/REHEARSAL/der_wandersmann/der_wandersmann_ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dunkle_stunde/lilypond/PDF/dunkle_stunde.ly.pdf}                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/far_over_the_misty_mountains_cold/lilypond/PDF/far_over_the_misty_mountains_cold.ly.pdf}                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/geisterschiff/lilypond/PDF/geisterschiff.ly.pdf}                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/grau_sind_die_schwingen/lilypond/PDF/grau_sind_die_schwingen.ly.pdf}                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/i_see_fire/lilypond/PDF/i_see_fire.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ich_und_ein_fass_voller_wein/lilypond/PDF/ich_und_ein_fass_voller_wein.ly.pdf}                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/i_courted_a_wee_girl/lilypond/PDF/i_courted_a_wee_girl.ly.pdf}                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ihr_so_nah/lilypond/PDF/ihr_so_nah.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kleid_aus_rosen/lilypond/PDF/kleid_aus_rosen.ly.pdf}                                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/lord_of_the_rings/lilypond/PDF/lord_of_the_rings.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/making_up_the_miles/lilypond/PDF/making_up_the_miles.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mord_auf_dem_abort/lilypond/PDF/mord_auf_dem_abort.ly.pdf}                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/nebel_ueber_den_auen/lilypond/PDF/nebel_ueber_den_auen.ly.pdf}                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/oh_adelsmann/lilypond/PDF/oh_adelsmann.ly.pdf}                                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/prinzessin/lilypond/PDF/prinzessin.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/senzenina/lilypond/PDF/senzenina.ly.pdf}                                                                      \sclearpage
+        \includepdf[pages=1,offset=50 -80,width=0.9\textwidth,pagecommand={\subsection{Silent Night} \pagestyle{fancy}}]{../PUBLISH/REHEARSAL/silent_night/silent_night_ly.pdf}                                     \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/step_it_out_mary/lilypond/PDF/step_it_out_mary.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/tanz_mit_mir/lilypond/PDF/tanz_mit_mir.ly.pdf}                                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_bards_song/lilypond/PDF/the_bards_song.ly.pdf}                                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_bonny_ship_the_diamond/lilypond/PDF/the_bonny_ship_the_diamond.ly.pdf}                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_dragonborn_comes/lilypond/PDF/the_dragonborn_comes.ly.pdf}                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_rattlin_bog/lilypond/PDF/the_rattlin_bog.ly.pdf}                                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_wild_rover/lilypond/PDF/the_wild_rover.ly.pdf}                                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/trunckenbolde/lilypond/PDF/trunckenbolde.ly.pdf}                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/willst_du/lilypond/PDF/willst_du.ly.pdf}                                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/wout_mit_den_woelfen/lilypond/PDF/wout_mit_den_woelfen.ly.pdf}                                                \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ye_jackobites/lilypond/PDF/ye_jackobites.ly.pdf}
     \end{songs}
 
 %\clearpage
 %\songsection{Fun}
     %\begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/a_gracing_mace/lilypond/PDF/a_gracing_mace.ly.pdf}                                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blau_wie_das_meer/lilypond/PDF/blau_wie_das_meer.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/die_nackte_elfe/lilypond/PDF/die_nackte_elfe.ly.pdf}                                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dragonball/lilypond/PDF/dragonball.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/buenas_tardes_amigo/lilypond/PDF/buenas_tardes_amigo.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/death_to_the_drow/lilypond/PDF/death_to_the_drow.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/eine_leiche_im_teich/lilypond/PDF/eine_leiche_im_teich.ly.pdf}                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ethik_der_fuesse/lilypond/PDF/ethik_der_fuesse.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/fassbier_und_paladosen/lilypond/PDF/fassbier_und_paladosen.ly.pdf}                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/gossenabitur/lilypond/PDF/gossenabitur.ly.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hes_a_pirate/lilypond/PDF/hes_a_pirate.ly.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kaperfahrt/lilypond/PDF/kaperfahrt.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kickapoo/lilypond/PDF/kickapoo.ly.pdf}                                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mein_kleiner_gruener_goblin/lilypond/PDF/mein_kleiner_gruener_goblin.ly.pdf}                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/nscs_luegen_nicht/lilypond/PDF/nscs_luegen_nicht.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/pippi_langstrumpf/lilypond/PDF/pippi_langstrumpf.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sauf_mich_schoen/lilypond/PDF/sauf_mich_schoen.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/seehilfe/lilypond/PDF/seehilfe.ly.pdf}                                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/stille_nacht-LARP/lilypond/PDF/stille_nacht-LARP.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/super_knasterbart/lilypond/PDF/super_knasterbart.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/trigardon/lilypond/PDF/trigardon.ly.pdf}                                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_enchanter/lilypond/PDF/the_enchanter.ly.pdf}                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/untot_auf_urlaub/lilypond/PDF/untot_auf_urlaub.ly.pdf}                                                       \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/a_gracing_mace/lilypond/PDF/a_gracing_mace.ly.pdf}                                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blau_wie_das_meer/lilypond/PDF/blau_wie_das_meer.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/die_nackte_elfe/lilypond/PDF/die_nackte_elfe.ly.pdf}                                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dragonball/lilypond/PDF/dragonball.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/buenas_tardes_amigo/lilypond/PDF/buenas_tardes_amigo.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/death_to_the_drow/lilypond/PDF/death_to_the_drow.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/eine_leiche_im_teich/lilypond/PDF/eine_leiche_im_teich.ly.pdf}                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/ethik_der_fuesse/lilypond/PDF/ethik_der_fuesse.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/fassbier_und_paladosen/lilypond/PDF/fassbier_und_paladosen.ly.pdf}                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/gossenabitur/lilypond/PDF/gossenabitur.ly.pdf}                                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hes_a_pirate/lilypond/PDF/hes_a_pirate.ly.pdf}                                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kaperfahrt/lilypond/PDF/kaperfahrt.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/kickapoo/lilypond/PDF/kickapoo.ly.pdf}                                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mein_kleiner_gruener_goblin/lilypond/PDF/mein_kleiner_gruener_goblin.ly.pdf}                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/nscs_luegen_nicht/lilypond/PDF/nscs_luegen_nicht.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/pippi_langstrumpf/lilypond/PDF/pippi_langstrumpf.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sauf_mich_schoen/lilypond/PDF/sauf_mich_schoen.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/seehilfe/lilypond/PDF/seehilfe.ly.pdf}                                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/stille_nacht-LARP/lilypond/PDF/stille_nacht-LARP.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/super_knasterbart/lilypond/PDF/super_knasterbart.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/trigardon/lilypond/PDF/trigardon.ly.pdf}                                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_enchanter/lilypond/PDF/the_enchanter.ly.pdf}                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/untot_auf_urlaub/lilypond/PDF/untot_auf_urlaub.ly.pdf}                                                        \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/viking_men/lilypond/PDF/viking_men.ly.pdf}
     %\end{songs}{}
 
 %\clearpage
 %\songsection{Modern / Rock / Blues}{}
     %\begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/everything_burns/lilypond/PDF/everything_burns.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/little_talks/lilypond/PDF/little_talks.ly.pdf}                                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mountain_climbing/lilypond/PDF/mountain_climbing.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/rolling_in_the_deep/lilypond/PDF/rolling_in_the_deep.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/seven_nation_army/lilypond/PDF/seven_nation_army.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sound_of_silence/lilypond/PDF/sound_of_silence.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/summer_wine/lilypond/PDF/summer_wine.ly.pdf}                                                                 \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/everything_burns/lilypond/PDF/everything_burns.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/little_talks/lilypond/PDF/little_talks.ly.pdf}                                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/mountain_climbing/lilypond/PDF/mountain_climbing.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/rolling_in_the_deep/lilypond/PDF/rolling_in_the_deep.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/seven_nation_army/lilypond/PDF/seven_nation_army.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sound_of_silence/lilypond/PDF/sound_of_silence.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/summer_wine/lilypond/PDF/summer_wine.ly.pdf}                                                                  \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/timshel/lilypond/PDF/timshel.ly.pdf}
     %\end{songs}
 
 %\clearpage
 %\songsection{Oldies}
     %\begin{songs}{}
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/and_so_it_goes/lilypond/PDF/and_so_it_goes.ly.pdf}                                                           \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/back_in_the_high_life/lilypond/PDF/back_in_the_high_life.ly.pdf}                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blackbird/lilypond/PDF/blackbird.ly.pdf}                                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blowing_in_the_wind/lilypond/PDF/blowing_in_the_wind.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dimming_of_the_day/lilypond/PDF/dimming_of_the_day.ly.pdf}                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/fragile/lilypond/PDF/fragile.ly.pdf}                                                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/gods_gonna_cut_you_down/lilypond/PDF/gods_gonna_cut_you_down.ly.pdf}                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/havent_we_lost_enough/lilypond/PDF/havent_we_lost_enough.ly.pdf}                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hallelujah/lilypond/PDF/hallelujah.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/helplessly_hoping/lilypond/PDF/helplessly_hoping.ly.pdf}                                                     \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/constant_sorrow/lilypond/PDF/constant_sorrow.ly.pdf}                                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/it_doesnt_matter/lilypond/PDF/it_doesnt_matter.ly.pdf}                                                       \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/layla/lilypond/PDF/layla.ly.pdf}                                                                             \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/lives_in_the_balance/lilypond/PDF/lives_in_the_balance.ly.pdf}                                               \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/moonshadow/lilypond/PDF/moonshadow.ly.pdf}                                                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/rainbow_in_the_dark/lilypond/PDF/rainbow_in_the_dark.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sailing_to_philadelphia/lilypond/PDF/sailing_to_philadelphia.ly.pdf}                                         \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/teach_your_children/lilypond/PDF/teach_your_children.ly.pdf}                                                 \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_green_fields_of_france/lilypond/PDF/the_green_fields_of_france.ly.pdf}                                   \sclearpage
-        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/up_where_we_belong/lilypond/PDF/up_where_we_belong.ly.pdf}                                                   \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/and_so_it_goes/lilypond/PDF/and_so_it_goes.ly.pdf}                                                            \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/back_in_the_high_life/lilypond/PDF/back_in_the_high_life.ly.pdf}                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blackbird/lilypond/PDF/blackbird.ly.pdf}                                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/blowing_in_the_wind/lilypond/PDF/blowing_in_the_wind.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/dimming_of_the_day/lilypond/PDF/dimming_of_the_day.ly.pdf}                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/fragile/lilypond/PDF/fragile.ly.pdf}                                                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/gods_gonna_cut_you_down/lilypond/PDF/gods_gonna_cut_you_down.ly.pdf}                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/havent_we_lost_enough/lilypond/PDF/havent_we_lost_enough.ly.pdf}                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/hallelujah/lilypond/PDF/hallelujah.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/helplessly_hoping/lilypond/PDF/helplessly_hoping.ly.pdf}                                                      \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/constant_sorrow/lilypond/PDF/constant_sorrow.ly.pdf}                                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/it_doesnt_matter/lilypond/PDF/it_doesnt_matter.ly.pdf}                                                        \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/layla/lilypond/PDF/layla.ly.pdf}                                                                              \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/lives_in_the_balance/lilypond/PDF/lives_in_the_balance.ly.pdf}                                                \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/moonshadow/lilypond/PDF/moonshadow.ly.pdf}                                                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/rainbow_in_the_dark/lilypond/PDF/rainbow_in_the_dark.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/sailing_to_philadelphia/lilypond/PDF/sailing_to_philadelphia.ly.pdf}                                          \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/teach_your_children/lilypond/PDF/teach_your_children.ly.pdf}                                                  \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/the_green_fields_of_france/lilypond/PDF/the_green_fields_of_france.ly.pdf}                                    \sclearpage
+        %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/up_where_we_belong/lilypond/PDF/up_where_we_belong.ly.pdf}                                                    \sclearpage
         %\includepdf[pages=-,offset=50 -80,width=0.9\textwidth,pagecommand={\pagestyle{fancy}}]{../src/walking_in_memphis/lilypond/PDF/walking_in_memphis.ly.pdf}
     %\end{songs}
 \end{document}
