[ Chordbook ] disabling (almost) every song ...
... except for:

- Stille Nacht (Larp)
- Der Wandersmann
- Das Bier ich in der Rechten trug

I will enable songs when they are ready or in testing.

--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -66,12 +66,12 @@
 \songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
         %\input{../src/auld_lang_syne/LaTeX/auld_lang_syne}                                                                  \sclearpage
-        %\input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
+        \input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
         %\input{../src/davy_jones_theme/LaTeX/davy_jones_theme}                                                              \sclearpage
         \input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
         %\input{../src/dunkle_stunde/LaTeX/dunkle_stunde}                                                                    \sclearpage
         %\input{../src/far_over_the_misty_mountains_cold/LaTeX/far_over_the_misty_mountains_cold}                            \sclearpage
-        \input{../src/geisterschiff/LaTeX/geisterschiff}                                                                    \sclearpage
+        %\input{../src/geisterschiff/LaTeX/geisterschiff}                                                                    \sclearpage
         %\input{../src/grau_sind_die_schwingen/LaTeX/grau_sind_die_schwingen}                                                \sclearpage
         %\input{../src/i_see_fire/LaTeX/i_see_fire}                                                                          \sclearpage
         %\input{../src/ich_und_ein_fass_voller_wein/LaTeX/ich_und_ein_fass_voller_wein}                                      \sclearpage
@@ -80,7 +80,7 @@
         %\input{../src/kleid_aus_rosen/LaTeX/kleid_aus_rosen}                                                                \sclearpage
         %\input{../src/lord_of_the_rings/LaTeX/lord_of_the_rings}                                                            \sclearpage
         %\input{../src/making_up_the_miles/LaTeX/making_up_the_miles}                                                        \sclearpage
-        \input{../src/mord_auf_dem_abort/LaTeX/mord_auf_dem_abort}                                                          \sclearpage
+        %\input{../src/mord_auf_dem_abort/LaTeX/mord_auf_dem_abort}                                                          \sclearpage
         %\input{../src/nebel_ueber_den_auen/LaTeX/nebel_ueber_den_auen}                                                      \sclearpage
         %\input{../src/oh_adelsmann/LaTeX/oh_adelsmann}                                                                      \sclearpage
         %\input{../src/prinzessin/LaTeX/prinzessin}                                                                          \sclearpage
@@ -92,8 +92,8 @@
         %\input{../src/the_bards_song/LaTeX/the_bards_song}                                                                  \sclearpage
         %\input{../src/the_bonny_ship_the_diamond/LaTeX/the_bonny_ship_the_diamond}                                          \sclearpage
         %\input{../src/the_dragonborn_comes/LaTeX/the_dragonborn_comes}                                                      \sclearpage
-        \input{../src/the_rattlin_bog/LaTeX/the_rattlin_bog}                                                                \sclearpage
-        \input{../src/the_wild_rover/LaTeX/the_wild_rover}                                                                  \sclearpage
+        %\input{../src/the_rattlin_bog/LaTeX/the_rattlin_bog}                                                                \sclearpage
+        %\input{../src/the_wild_rover/LaTeX/the_wild_rover}                                                                  \sclearpage
         %\input{../src/trunckenbolde/LaTeX/trunckenbolde}                                                                    \sclearpage
         %\input{../src/willst_du/LaTeX/willst_du}                                                                            \sclearpage
         %\input{../src/wout_mit_den_woelfen/LaTeX/wout_mit_den_woelfen}                                                      \sclearpage
@@ -108,12 +108,12 @@
         %\input{../src/die_nackte_elfe/LaTeX/die_nackte_elfe}                                                                \sclearpage
         %\input{../src/dragonball/LaTeX/dragonball}                                                                          \sclearpage
         %\input{../src/buenas_tardes_amigo/LaTeX/buenas_tardes_amigo}                                                        \sclearpage
-        \input{../src/death_to_the_drow/LaTeX/death_to_the_drow}                                                            \sclearpage
+        %\input{../src/death_to_the_drow/LaTeX/death_to_the_drow}                                                            \sclearpage
         %\input{../src/eine_leiche_im_teich/LaTeX/eine_leiche_im_teich}                                                      \sclearpage
         %\input{../src/ethik_der_fuesse/LaTeX/ethik_der_fuesse}                                                              \sclearpage
-        \input{../src/fassbier_und_paladosen/LaTeX/fassbier_und_paladosen}                                                  \sclearpage
+        %\input{../src/fassbier_und_paladosen/LaTeX/fassbier_und_paladosen}                                                  \sclearpage
         %\input{../src/gossenabitur/LaTeX/gossenabitur}                                                                      \sclearpage
-        \input{../src/hes_a_pirate/LaTeX/hes_a_pirate}                                                                      \sclearpage
+        %\input{../src/hes_a_pirate/LaTeX/hes_a_pirate}                                                                      \sclearpage
         %\input{../src/i_need_a_sheep/LaTeX/i_need_a_sheep}                                                                  \sclearpage
         %\input{../src/kaperfahrt/LaTeX/kaperfahrt}                                                                          \sclearpage
         %\input{../src/kickapoo/LaTeX/kickapoo}                                                                              \sclearpage
@@ -122,10 +122,10 @@
         %\input{../src/pippi_langstrumpf/LaTeX/pippi_langstrumpf}                                                            \sclearpage
         %\input{../src/sauf_mich_schoen/LaTeX/sauf_mich_schoen}                                                              \sclearpage
         %\input{../src/seehilfe/LaTeX/seehilfe}                                                                              \sclearpage
-        %\input{../src/stille_nacht-LARP/LaTeX/stille_nacht-LARP}                                                            \sclearpage
+        \input{../src/stille_nacht-LARP/LaTeX/stille_nacht-LARP}                                                            \sclearpage
         %\input{../src/super_knasterbart/LaTeX/super_knasterbart}                                                            \sclearpage
         %\input{../src/trigardon/LaTeX/trigardon}                                                                            \sclearpage
-        \input{../src/the_enchanter/LaTeX/the_enchanter}                                                                    \sclearpage
+        %\input{../src/the_enchanter/LaTeX/the_enchanter}                                                                    \sclearpage
         %\input{../src/untot_auf_urlaub/LaTeX/untot_auf_urlaub}                                                              \sclearpage
         %\input{../src/viking_men/LaTeX/viking_men}
     \end{songs}{}
@@ -145,16 +145,16 @@
 %        %\input{../src/wo_sind_die_clowns/LaTeX/wo_sind_die_clowns}
 %    \end{songs}
 
-\clearpage
-\songsection{Oldies}
-    \begin{songs}{}
+%\clearpage
+%\songsection{Oldies}
+    %\begin{songs}{}
         %\input{../src/and_so_it_goes/LaTeX/and_so_it_goes}                                                                  \sclearpage
         %\input{../src/back_in_the_high_life/LaTeX/back_in_the_high_life}                                                    \sclearpage
         %\input{../src/blackbird/LaTeX/blackbird}                                                                            \sclearpage
         %\input{../src/blowing_in_the_wind/LaTeX/blowing_in_the_wind}                                                        \sclearpage
         %\input{../src/dimming_of_the_day/LaTeX/dimming_of_the_day}                                                          \sclearpage
         %\input{../src/fragile/LaTeX/fragile}                                                                                \sclearpage
-        \input{../src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down}                                                \sclearpage
+        %\input{../src/gods_gonna_cut_you_down/LaTeX/gods_gonna_cut_you_down}                                                \sclearpage
         %\input{../src/havent_we_lost_enough/LaTeX/havent_we_lost_enough}                                                    \sclearpage
         %\input{../src/hallelujah/LaTeX/hallelujah}                                                                          \sclearpage
         %\input{../src/helplessly_hoping/LaTeX/helplessly_hoping}                                                            \sclearpage
@@ -166,8 +166,8 @@
         %\input{../src/rainbow_in_the_dark/LaTeX/rainbow_in_the_dark}                                                        \sclearpage
         %\input{../src/sailing_to_philadelphia/LaTeX/sailing_to_philadelphia}                                                \sclearpage
         %\input{../src/teach_your_children/LaTeX/teach_your_children}                                                        \sclearpage
-        \input{../src/the_green_fields_of_france/LaTeX/the_green_fields_of_france}                                          \sclearpage
+        %\input{../src/the_green_fields_of_france/LaTeX/the_green_fields_of_france}                                          \sclearpage
         %\input{../src/up_where_we_belong/LaTeX/up_where_we_belong}                                                          \sclearpage
         %\input{../src/walking_in_memphis/LaTeX/walking_in_memphis}
-    \end{songs}
+    %\end{songs}
 \end{document}
