[ der wandersmann : lilypond ] fixing last chorus + typo

--- a/src/der_wandersmann/LaTeX/der_wandersmann.tex
+++ b/src/der_wandersmann/LaTeX/der_wandersmann.tex
@@ -68,7 +68,7 @@
 
         ^Ich schlich m^ich von h^inten an,
         mein K^ampfschrei klang wie t^ausend Mann.
-        Sie rannten f^ort wie sch^eu's Get^ier;
+        Sie rannten f^ort wie sch^eues Get^ier;
         der H^elm hier ^als Bew^eis daf\"{u}r!
     \endverse
 
@@ -104,8 +104,12 @@
     \endverse
 
     \beginchorus\replay[chorus]
-        \lrep Es fl^ie\ss{}t der Wein, es fl^ie\ss{}t das Bier!
-        H\[F]och die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{4}
-        \textnote{4. Mal rit., ``wir'' lange halten.}
+        \lrep Es fl\[C]ie\ss{}t der Wein, es fl\[G]ie\ss{}t das Bier!
+        H\[F]och die Kr\"{u}ge tr\[G]inken wir! \rrep \rep{3}
+        \vspace{1cm}
+        Es fl\[C]ie\ss{}t der Wein, es fl\[G]ie\ss{}t das Bier!
+        H\[F]och die Kr\"{u}ge tr\[G]inken w\[C]ir!
+        \par\bigskip
+        \textnote{Letzte Zeile mit Ritardando, das "`wir"' lange halten.}
     \endchorus
 \endsong
