[ silent night : LaTeX ] minor structure + chord table

--- a/src/stille_nacht-LARP/LaTeX/stille_nacht-LARP.tex
+++ b/src/stille_nacht-LARP/LaTeX/stille_nacht-LARP.tex
@@ -3,7 +3,6 @@
 \stepcounter{subsection}
 
 \beginsong{Stille Nacht}[%
-    by={Larp-Lieder.de},
     by={Anja Berger},
     index={stillenacht-larp}]
 
@@ -12,7 +11,18 @@
 
     \label{stillenacht-larp}
 
-    \beginverse
+    \capo{4}
+
+    %\begin{center}
+        %\gtab{C}{032010:032010}
+        %\gtab{G}{320033:210034}
+        %\gtab{Dm}{XX0231:000231}
+        %\gtab{Am}{X02210:002310}
+        %\gtab{Fm6/D}{3:XX0342:000231}
+        %\gtab{Am/D}{5:XX0111:000111}
+    %\end{center}
+
+    \beginverse\memorize[verse]
         Stille Nacht, friedliche Nacht,
         alles schlaeft, keiner wacht...
         Nur die Kultisten drunten im Tal
@@ -21,7 +31,7 @@
         schlafe mit Frieden im Sinn.
     \endverse
 
-    \beginverse
+    \beginverse\replay[verse]
         Stille Nacht, friedliche Nacht,
         hatte sich auch der Wandrer gedacht,
         jetzt liegt er auf dem Opferaltar,
@@ -30,7 +40,7 @@
         schlafe mit Frieden im Sinn.
     \endverse
 
-    \beginverse
+    \beginverse\replay[verse]
         Stille Nacht, friedliche Nacht,
         ein Messer blitzt im Dunkeln sacht
         Der Bannkreis spaeter sanft verweht,
@@ -39,7 +49,7 @@
         schlafe mit Frieden im Sinn
     \endverse
 
-    \beginverse
+    \beginverse\replay[verse]
         Stille Nacht, friedliche Nacht,
         in der Taverne man noch lacht,
         der Frau die fast halbtot die Tuer noch erreicht,
@@ -48,7 +58,7 @@
         schlafe mit Frieden im Sinn.
     \endverse
 
-    \beginverse
+    \beginverse\replay[verse]
         Stille Nacht, friedliche Nacht,
         sei nur ruhig- gib nicht acht,
         die Schreie die dort in der Ferne zu hoern,
