[ Ext chordbook - class] adding caption package as requirement

--- a/TeX/Chordbook_Extended/chordbook_extended.cls
+++ b/TeX/Chordbook_Extended/chordbook_extended.cls
@@ -20,6 +20,7 @@
 
 %\newcommand\incls[1]{\input{input/{#1}} \sclearpage}
 
+\RequirePackage{caption}
 
 % Sprachpaket
 \RequirePackage[ngerman]{babel}
