[ Ext Chordbook ] adding songnumwidth

--- a/TeX/Chordbook_Extended/Chordbook_Extended.tex
+++ b/TeX/Chordbook_Extended/Chordbook_Extended.tex
@@ -14,8 +14,10 @@
     hyperfigures=true%
     ]{hyperref}
 
-\RequirePackage[chorded]{songs}
-\RequirePackage{caption}
+\usepackage[chorded]{songs}
+
+\setlength{\songnumwidth}{15mm}
+\setlength{\versenumwidth}{10mm}
 
 \setboolean{@twoside}{false}
 % custom commands
