[ Disclaimer ] separating paragraphs + shrinking font size

--- a/TeX/Disclaimer.tex
+++ b/TeX/Disclaimer.tex
@@ -1,6 +1,7 @@
 % vim: ft=tex
+
 \begin{center}
-    { \Large
+    { \large
         \begin{minipage}[h]{0.7\textwidth}
             \begin{tcolorbox}[colback=red!7,colframe=red!70!black,fonttitle=\bfseries,title=Disclaimer]
                 Dieses \textit{Chordbook} stellt eine pers\"{o}nliche und vielf\"{a}ltige Sammlung von Liedgut dar, die ich \"{u}ber die Jahre gesammelt habe.
@@ -11,9 +12,13 @@
                 Dank \textsc{Fagus vom Friedrichshain} konnte ich mein Chordbook um einige St\"{u}cke erweitern.
                 Seine Beitr\"{a}ge sind gekennzeichnet oder werden noch gekennzeichnet werden.
             \end{tcolorbox}
+        \end{minipage}
+    }
 
-            \vspace{2cm}
+            \vfill
 
+    { \large
+        \begin{minipage}[h]{0.7\textwidth}
             \begin{tcolorbox}[colback=red!7,colframe=red!70!black,fonttitle=\bfseries,title=Stimmung der Gitarre]
                 Meine Gitarre ist in \texttt{D} gestimmt \texttt{(DGCFAd)}, d.h. die aufgeführten Akkorde sind nur "Griffmuster".
                 Ggf. aufgeführte \texttt{capo x} Ansagen beziehen die tiefer gestimmte Gitarre mit ein.
