[ Disclaimer ] correcting typos with quotationmarks

--- a/TeX/Disclaimer.tex
+++ b/TeX/Disclaimer.tex
@@ -20,9 +20,9 @@
     { \large
         \begin{minipage}[h]{0.7\textwidth}
             \begin{tcolorbox}[colback=red!7,colframe=red!70!black,fonttitle=\bfseries,title=Stimmung der Gitarre]
-                Meine Gitarre ist in \texttt{D} gestimmt \texttt{(DGCFAd)}, d.h. die aufgeführten Akkorde sind nur "Griffmuster".
+                Meine Gitarre ist in \texttt{D} gestimmt \texttt{(DGCFAd)}, d.h. die aufgeführten Akkorde sind nur "`Griffmuster"'.
                 Ggf. aufgeführte \texttt{capo x} Ansagen beziehen die tiefer gestimmte Gitarre mit ein.
-                Eine Stück mit \texttt{capo 4} auf meiner Gitarre ist also ein \texttt{capo 2} auf "normalen" Gitarren.
+                Eine Stück mit \texttt{capo 4} auf meiner Gitarre ist also ein \texttt{capo 2} auf "`normalen"' Gitarren.
             \end{tcolorbox}
         \end{minipage}
     }
