[davy jones] new version

--- a/src/davy-jones-dead-mans-chest/LaTeX/davy-jones-dead-mans-chest.tex
+++ b/src/davy-jones-dead-mans-chest/LaTeX/davy-jones-dead-mans-chest.tex
@@ -2,16 +2,16 @@
 
 \stepcounter{subsection}
 
-\beginsong{Davy Jones Theme}[%
-    by={Eddie van der Meer},
-    cr={Eddie van der Meer},
-    li={Epic Elite},
-    index={davy_jones_theme}]
+\beginsong{Davy Jones (from Pirates of the Caribbean: Dead Man's Chest)}[%
+    by={Hans Zimmer},
+    cr={Walt Disney Music Company},
+    li={Walt Disney Music Publishing, authorized for use by hringriin@googlemail.com},
+    index={davy-jones-dead-mans-chest}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Davy Jones Theme} --- Eddie van der Meer}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Davy Jones (from Pirates of the Caribbean: Dead Man's Chest)} --- Hans Zimmer}
 
-    \label{davy_jones_theme}
+    \label{davy-jones-dead-mans-chest}
 
     \begin{center}
         \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
